--- a/src/main/resources/static/css/text.css
+++ b/src/main/resources/static/css/text.css
@@ -1,3 +1,8 @@
+.link-primary,
+.link-danger {
+    cursor: pointer;
+}
+
 .header {
     margin: 30px 0;
 }
@@ -11,9 +16,27 @@
 }
 
 .list-group-item {
+    word-break: break-all;
     padding: 1rem 1rem;
 }
 
 .text-muted {
     margin-bottom: 0;
+}
+
+.card-body {
+    padding: .781rem 1rem;
+}
+
+#textShow {
+    min-height: 75vh;
+}
+
+.spinner-border {
+    width: 3rem;
+    height: 3rem;
+    position: fixed;
+    z-index: 1;
+    top: 50%;
+    right: 50%;
 }
