--- a/src/main/resources/static/css/task.css
+++ b/src/main/resources/static/css/task.css
@@ -1,33 +1,25 @@
-.header {
-    margin: 30px 0;
-}
-
-.form-check-input:checked+.form-checked-content {
-    text-decoration: line-through;
-    opacity: .5;
+.form-check-input:checked + .form-checked-content {
+  text-decoration: line-through;
+  opacity: 0.5;
 }
 
 .form-check-input-placeholder {
-    border-style: dashed;
+  border-style: dashed;
 }
 
 [contenteditable]:focus {
-    outline: 0;
+  outline: 0;
 }
 
 .form-check-input {
-    font-size: 1.1rem;
+  font-size: 1.1rem;
 }
 
 .list-group-item {
-    padding: 10px;
-    cursor: pointer;
-}
-
-a {
-    text-decoration: none;
+  padding: 10px;
+  cursor: pointer;
 }
 
 .editable {
-    cursor: text;
+  cursor: text;
 }
