--- a/src/main/resources/static/css/bookmark.css
+++ b/src/main/resources/static/css/bookmark.css
@@ -1,31 +1,15 @@
-.header {
-    margin: 30px 0;
-}
-
-a {
-    cursor: pointer;
-    text-decoration: none;
-}
-
-.link-primary {
-    cursor: pointer;
-}
-
-.td {
-    width: 45%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+.w-45 {
+  width: 45%;
 }
 
 .img {
-    height: 18px;
-    width: auto;
-    margin-right: 5px;
+  width: auto;
+  height: 18px;
+  margin-right: 5px;
 }
 
 @media screen and (max-width: 768px) {
-    .url {
-        display: none;
-    }
+  .url {
+    display: none;
+  }
 }
