--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,108 +1,73 @@
-.link-primary,
-.link-danger {
-    cursor: pointer;
-}
-
-.header {
-    margin: 30px 0;
-}
-
 .breadcrumb {
-    margin: .5rem 0;
-}
-
-.breadcrumb li {
-    max-width: 200px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-#searchInput {
-    flex: 1 1 auto;
-    width: 1%;
-}
-
-.dropdown {
-    padding-left: 5px;
+  margin: 0.5rem 0;
 }
 
 .table > tbody > tr > td {
-    vertical-align: middle;
-}
-
-.checkbox {
-    width: 2%;
-}
-
-.filename {
-    max-width: 200px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  vertical-align: middle;
 }
 
 #left {
-    float: left;
+  float: left;
 }
 
 #right {
-    float: right;
+  float: right;
 }
 
-.spinner-border {
-    width: 3rem;
-    height: 3rem;
-    position: fixed;
-    z-index: 1;
-    top: 50%;
-    right: 50%;
+.checkbox {
+  width: 2%;
+}
+
+.filename {
+  max-width: 200px;
 }
 
 #image {
-    max-width: 75%;
-    pointer-events: auto;
+  max-width: 75%;
+  pointer-events: auto;
 }
 
 #text {
-    max-width: 75%;
-    min-height: 100%;
-    pointer-events: auto;
-    margin: 0 auto;
-    overflow-y: auto;
-    white-space: pre-wrap;
-    word-wrap: break-word;
+  max-width: 75%;
+  min-height: 100%;
+  pointer-events: auto;
+  margin: 0 auto;
+  overflow-y: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 @media screen and (max-width: 768px) {
-    .dropdown {
-        display: none;
-    }
+  .size,
+  .contentType,
+  .lastModified {
+    display: none;
+  }
 
-    .size,
-    .contentType,
-    .lastModified {
-        display: none;
-    }
+  .action {
+    width: 80px;
+  }
 
-    .action {
-        width: 100px;
-    }
+  #image {
+    max-width: 100%;
+  }
 
-    #left,
-    #right {
-        float: none;
-    }
+  #text {
+    max-width: 90%;
+  }
+}
 
-    #left .btn {
-        margin-bottom: 5px;
-    }
+@media screen and (max-width: 1000px) {
+  .dropdown {
+    display: none;
+  }
 
-    #image {
-        max-width: 100%;
-    }
+  #left,
+  #right {
+    float: none;
+  }
 
-    #text {
-        max-width: 95%;
-    }
+  #left .btn {
+    margin-bottom: 5px;
+  }
 }
