--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,16 +1,36 @@
-.breadcrumb {
-  margin: 0.5rem 0;
+/* common */
+
+.header {
+  margin: 30px 0;
 }
+
+.link-primary,
+.link-danger,
+a {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.spinner-border {
+  width: 3rem;
+  height: 3rem;
+  position: fixed;
+  z-index: 1;
+  top: 50%;
+  right: 50%;
+}
+
+/* files.html */
 
 .table > tbody > tr > td {
   vertical-align: middle;
 }
 
-#left {
+.files-left {
   float: left;
 }
 
-#right {
+.files-right {
   float: right;
 }
 
@@ -58,16 +78,59 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .dropdown {
-    display: none;
-  }
-
-  #left,
-  #right {
+  .files-left,
+  .files-right {
     float: none;
   }
 
-  #left .btn {
+  .files-left .btn {
     margin-bottom: 5px;
+  }
+
+  .dropdown {
+    display: none;
+  }
+}
+
+/* bookmarks.html */
+
+.w-45 {
+  width: 45%;
+}
+
+.icon {
+  width: auto;
+  height: 18px;
+  margin-right: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .url {
+    display: none;
+  }
+}
+
+/* index.html */
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.mw-50 {
+  max-width: 50%;
+}
+
+.mw-75 {
+  max-width: 75%;
+}
+
+.list-group-item {
+  word-break: break-all;
+  padding: 1rem 1rem;
+}
+
+@media screen and (max-width: 768px) {
+  .paste-detail-title {
+    display: none;
   }
 }
