style Command executor

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -58,3 +58,7 @@ a {
     max-width: 100% !important;
   }
 }
+
+.monospace {
+  font-family: Consolas, 'Dejavu Sans Mono', 'Courier New', monospace;
+}
